#1361 - Rework to show button depending on configured state, + warning when stopping folder OS. Fixes #1361

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -51,9 +51,13 @@ action_connect.description=Manually connect to a PowerFolder computer
 action_connect.key=C
 action_connect.name=Connect
 
-action_configure_folder_online_storage.description=Configure Online Storage for this folder
-action_configure_folder_online_storage.key=C
-action_configure_folder_online_storage.name=Configure
+action_backup_online_storage.description=Backup this folder to Online Storage
+action_backup_online_storage.key=B
+action_backup_online_storage.name=Backup
+
+action_stop_online_storage.description=Stop backing up this folder to Online Storage
+action_stop_online_storage.key=S
+action_stop_online_storage.name=Stop
 
 action_create_transfer_mode.description=Create a custom transfer mode
 action_create_transfer_mode.key=C
@@ -1076,6 +1080,9 @@ wizard.folder_online_storage_panel.remove_success_title=Online Storage Removal S
 wizard.folder_online_storage_panel.remove_success_message=The folder was successfully removed from Online Storage
 wizard.folder_online_storage_panel.failure_title=Online Storage Error
 wizard.folder_online_storage_panel.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
+wizard.folder_online_storage_panel.warning_title=Online Storage
+wizard.folder_online_storage_panel.warning_message=Do you really want to stop backing up this folder online?
+wizard.folder_online_storage_panel.warning_stop_backing=Stop backing up
 wizard.finish_panel.os_login_title=Online Storage Login Successful
 wizard.finish_panel.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
