--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -35,4 +35,6 @@ action_remove_friend.icon=icons/RemoveFriend.gif
 action_remove_ignore.icon=icons/Minus.png
 action_sync_folder.icon=icons/Sync.png
 action_delete_file.icon=icons/Delete.gif
-action_configure_folder_online_storage.icon=icons/PFOnline.png
+action_backup_online_storage.icon=icons/OnlineFolder.png
+action_stop_online_storage.icon=icons/StopOnlineFolder.png
+
