#278 - Preview button in Settings tab (1 of 2).

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -37,4 +37,6 @@ action_sync_folder.icon=icons/Sync.png
 action_delete_file.icon=icons/Delete.gif
 action_backup_online_storage.icon=icons/OnlineFolder.png
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
+action_preview_folder.icon=icons/PreviewFolder.png
+action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 
