--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -167,6 +167,14 @@ action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
 
+action_preview_folder.description=Convert this folder to a preview
+action_preview_folder.key=P
+action_preview_folder.name=Preview
+
+action_stop_preview_folder.description=Convert this preview folder to normal
+action_stop_preview_folder.key=C
+action_stop_preview_folder.name=Convert
+
 action_sync_all_folders.description=Synchronizes all folders now (F5)
 action_sync_all_folders.key=S
 action_sync_all_folders.name=Synchronize
@@ -962,6 +970,9 @@ send_invitation.no_users=No users selected
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.select_user.text=Select user
 send_invitation.subject=Invitation to the PowerFolder '{0}'
+
+settings_tab.online_storage=Online storage
+settings_tab.folder_preview=Folder preview
 
 splash.version=Version {0}
 
