#278 - Preview button in Settings tab (2 of 2).

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -171,9 +171,9 @@ action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
 action_preview_folder.name=Preview
 
-action_stop_preview_folder.description=Convert this preview folder to normal
-action_stop_preview_folder.key=C
-action_stop_preview_folder.name=Convert
+action_stop_preview_folder.description=Join this preview folder
+action_stop_preview_folder.key=J
+action_stop_preview_folder.name=Join
 
 action_sync_all_folders.description=Synchronizes all folders now (F5)
 action_sync_all_folders.key=S
@@ -564,31 +564,6 @@ folder_information_card.members.tips=Shows folder member details
 folder_information_card.members.title=Members
 folder_information_card.settings.tips=Shows settings for this folder
 folder_information_card.settings.title=Settings
-folder_information_settings_tab.add_a_pattern.example=example/*.jpg
-folder_information_settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
-folder_information_settings_tab.add_a_pattern.title=Add ignore pattern
-folder_information_settings_tab.add_patterns.text_1=The following ignore patterns will be added
-folder_information_settings_tab.add_patterns.title=Add ignore patterns
-folder_information_settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
-folder_information_settings_tab.confirm_local_folder_move.title=Confirm move
-folder_information_settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
-folder_information_settings_tab.edit_a_pattern.title=Edit a pattern
-folder_information_settings_tab.folder_not_empty.title=Folder not empty.
-folder_information_settings_tab.folder_not_empty=Folder {0} is not empty.
-folder_information_settings_tab.ignore_patterns=Ignore patterns
-folder_information_settings_tab.local_folder_location=Local folder location
-folder_information_settings_tab.move_content.dont=Do Not Move Contents
-folder_information_settings_tab.move_content.move=Move Contents
-folder_information_settings_tab.move_content.title=Move folder contents
-folder_information_settings_tab.move_content=Also move current folder contents?
-folder_information_settings_tab.move_error.other=There was an error moving the folder\:\n{0}
-folder_information_settings_tab.move_error.temp=Could not create temporary folder
-folder_information_settings_tab.move_error.title=Error moving folder contents
-folder_information_settings_tab.select_directory.text=Select folder location
-folder_information_settings_tab.transfer_mode=Transfer mode
-folder_information_settings_tab.use_recycle_bin=Use recycle bin
-folder_information_settings_tab.working.description=The folder is being moved
-folder_information_settings_tab.working.title=Moving folder
 
 folder_join.dialog.title=Join PowerFolder {0}?
 folder_join.join.key=J
@@ -971,8 +946,36 @@ send_invitation.placetostore=Choose a place to store invitation
 send_invitation.select_user.text=Select user
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
-settings_tab.online_storage=Online storage
+settings_tab.add_a_pattern.example=example/*.jpg
+settings_tab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
+settings_tab.add_a_pattern.title=Add ignore pattern
+settings_tab.add_patterns.text_1=The following ignore patterns will be added
+settings_tab.add_patterns.title=Add ignore patterns
+settings_tab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
+settings_tab.confirm_local_folder_move.title=Confirm move
+settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
+settings_tab.edit_a_pattern.title=Edit a pattern
 settings_tab.folder_preview=Folder preview
+settings_tab.folder_not_empty.title=Folder not empty.
+settings_tab.folder_not_empty=Folder {0} is not empty.
+settings_tab.ignore_patterns=Ignore patterns
+settings_tab.local_folder_location=Local folder location
+settings_tab.move_content.dont=Do Not Move Contents
+settings_tab.move_content.move=Move Contents
+settings_tab.move_content.title=Move folder contents
+settings_tab.move_content=Also move current folder contents?
+settings_tab.move_error.other=There was an error moving the folder\:\n{0}
+settings_tab.move_error.temp=Could not create temporary folder
+settings_tab.move_error.title=Error moving folder contents
+settings_tab.online_storage=Online storage
+settings_tab.select_directory.text=Select folder location
+settings_tab.transfer_mode=Transfer mode
+settings_tab.use_recycle_bin=Use recycle bin
+settings_tab.working.description=The folder is being moved
+settings_tab.working.title=Moving folder
+settings_tab.preview_warning_title=Convert
+settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
+settings_tab.preview_warning_convert=Convert
 
 splash.version=Version {0}
 
