#278 - Delete button in Settings tab (1 of 2).

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -67,6 +67,10 @@ action_delete_file.description=Delete file
 action_delete_file.key=D
 action_delete_file.name=Delete
 
+action_delete_folder.description=Delete this folder
+action_delete_folder.key=D
+action_delete_folder.name=Delete
+
 action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
 action_delete_transfer_mode.name=Delete
@@ -976,6 +980,7 @@ settings_tab.working.title=Moving folder
 settings_tab.preview_warning_title=Convert
 settings_tab.preview_warning_message=Do you want to convert this folder to a preview?
 settings_tab.preview_warning_convert=Convert
+settings_tab.delete_folder=Delete folder
 
 splash.version=Version {0}
 
