--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -547,6 +547,8 @@ files_tab.combo.tool_tip=Select files to display
 files_tab.filter_by_file_name.hint=Filter by file name
 files_tab.filter_by_file_name.tool_tip=Filter results by file name
 
+files_table_panel.no_files_available=No files available
+
 find_computers_dialog.title=Find computers
 find_computers_panel.search_for_computer.hint=Search for a computer
 find_computers_panel.search_for_computer.tooltip=Enter three or more characters to search for a computer
