#1364 - empty text for computers list. Refs #1364

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -547,6 +547,7 @@ files_tab.combo.tool_tip=Select files to display
 files_tab.filter_by_file_name.hint=Filter by file name
 files_tab.filter_by_file_name.tool_tip=Filter results by file name
 
+computers_tab.no_computers_available=No computers available
 files_table_panel.no_files_available=No files available
 
 find_computers_dialog.title=Find computers
