#1332 - proposed 'pause' button.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -191,6 +191,10 @@ action_unmark.description=Unmark as new file (clear from downloads)
 action_unmark.key=U
 action_unmark.name=Unmark
 
+action_pause_sync.description=Pause all synchronization tasks
+action_pause_sync.key=P
+action_pause_sync.name=Pause
+
 ##################
 # Transfer Modes #
 ##################
