--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -40,3 +40,4 @@ action_restore_file.icon=icons/Restore.gif
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
+action_pause_sync.icon=icons/Suspend.gif
