--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -818,6 +818,8 @@ online_storage.account_data=Unable to login. Are account details correct?
 online_storage.connecting=Connecting to server
 online_storage.general_error=There was an error logging in\: ({0}).
 
+online_storage_component.online_storage_text=Online storage: {0}%
+
 percent.place.holder={0}%
 
 plugin_disable.description=Disable (and stop) Plugin
