#278 - OS sync details - web link

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -107,6 +107,10 @@ action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
 
+action_online_storage.description=Open this online storage folder in browser
+action_online_storage.key=O
+action_online_storage.name=Online Storage
+
 action_open_about_box.description=Show information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
