#278 - OS sync details - excess use color / tooltip

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -823,6 +823,7 @@ online_storage.connecting=Connecting to server
 online_storage.general_error=There was an error logging in\: ({0}).
 
 online_storage_component.online_storage_text=Online storage: {0}%
+online_storage_component.online_storage_warning=Online storage quota exceeded
 
 percent.place.holder={0}%
 
