#278 - Remove some duplicate icons

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -8,15 +8,15 @@ picto.logo.icon=icons/pictos/PowerFolderLogo96x96.png
 
 action_abort_download.icon=icons/Abort.gif
 action_add_friend.icon=icons/AddFriend.gif
-action_add_ignore.icon=icons/Plus.png
+action_add_ignore.icon=icons/Add.png
 action_backup_online_storage.icon=icons/OnlineFolder.png
 action_clear_completed_downloads.icon=icons/Clear.gif
 action_clear_completed_uploads.icon=icons/Clear.gif
 action_connect.icon=icons/ConnectBright.png
-action_create_transfer_mode.icon=icons/Plus.png
+action_create_transfer_mode.icon=icons/Add.png
 action_delete_file.icon=icons/Delete.gif
 action_delete_folder.icon=icons/Delete.gif
-action_delete_transfer_mode.icon=icons/Minus.png
+action_delete_transfer_mode.icon=icons/Delete.gif
 action_details.icon=icons/Details.gif
 action_download_file.icon=icons/Download.png
 action_edit_ignore.icon=icons/Edit.png
@@ -27,7 +27,7 @@ action_new_folder.icon=icons/NewFolder.png
 action_online_storage.icon=icons/OnlineFolder.png
 action_open_about_box.icon=icons/information.png
 action_open_chat.icon=icons/Chat.gif
-action_open_debug_information.icon=icons/bug.png
+action_open_debug_information.icon=icons/Bug.png
 action_open_file.icon=icons/Open.gif
 action_open_files_information.icon=icons/Files.png
 action_open_members_information.icon=icons/NodeFriendConnected.gif
@@ -36,7 +36,7 @@ action_open_settings_information.icon=icons/Settings.png
 action_preview_folder.icon=icons/PreviewFolder.png
 action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
-action_remove_ignore.icon=icons/Minus.png
+action_remove_ignore.icon=icons/Delete.gif
 action_restore_file.icon=icons/Restore.gif
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
