Ticket #1352 -- moving debug button down to the left side of the UI, on the same hight like the Preferences button but on the left

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -119,7 +119,7 @@ action_open_chat.description=Open a chat session with this computer
 action_open_chat.key=C
 action_open_chat.name=Chat
 
-action_open_debug_information.description=Open debug information
+action_open_debug_information.description=Open Debug information dialog
 action_open_debug_information.key=D
 action_open_debug_information.name=Debug
 
