#1332 - implement sleep button.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1008,6 +1008,8 @@ status.upload=%.2f KB/s
 status_bar.status_change.connected=PowerFolder is connected
 status_bar.status_change.disabled=PowerFolder is disabled
 status_bar.status_change.title=Connection Status
+status_bar.sleep.tips=Disable folder change scanning
+status_bar.no_sleep.tips=Enable folder change scanning
 
 synchronisation.notice.title=Activated transfer mode {0}
 synchronisation.warning.automatic_deletions_notice=This mode will also synchronize file deletions\!
