--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -482,6 +482,7 @@ exp_folder_view.local={0} local
 exp_folder_view.total={0} total
 exp_folder_view.recycled={0} file(s) ({1}) in recycle bin
 exp_folder_view.no_recycled=Recycle bin not used
+exp_folder_view.files_available_tip=Display the available files 
 
 file_copier.progress_dialog.text=Copy files...
 file_copier.progress_dialog.title=Copy files progress
@@ -597,7 +598,6 @@ folder_panel.settings_tab.removebutton.name=Remove
 folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
-folder_remove.dialog.preview=Keep as preview
 folder_remove.dialog.remove_from_local=Stop synchronizing locally
 folder_remove.dialog.remove_from_os=Remove from Online Storage
 folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
