--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -482,7 +482,9 @@ exp_folder_view.local={0} local
 exp_folder_view.total={0} total
 exp_folder_view.recycled={0} file(s) ({1}) in recycle bin
 exp_folder_view.no_recycled=Recycle bin not used
-exp_folder_view.files_available_tip=Display the available files 
+exp_folder_view.files_available_tip=Display the available files
+exp_folder_view.last_synchronized=Last synchronized {0}
+exp_folder_view.estimated_synchronized=Estimated synchronized {0} 
 
 file_copier.progress_dialog.text=Copy files...
 file_copier.progress_dialog.title=Copy files progress
