#1070 - first cut at multisource downloads

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1061,6 +1061,7 @@ transfers.queued=Queued
 transfers.remote_hashing=Preparing
 transfers.requested=Requested
 transfers.searching=Searching...
+transfers.swarm=Swarm: {0} members
 transfers.to=To
 transfers.verifying=Finalizing
 
