--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1061,7 +1061,7 @@ transfers.queued=Queued
 transfers.remote_hashing=Preparing
 transfers.requested=Requested
 transfers.searching=Searching...
-transfers.swarm=Swarm: {0} members
+transfers.swarm=Swarm: {0} member(s)
 transfers.to=To
 transfers.verifying=Finalizing
 
