#1344 (part) - folder drag and drop

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -348,6 +348,7 @@ chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not conn
 chat_panel.close_button.tool_tip=Close chat session with {0}
 
 choose_disk_location_panel.select=Please select the directory
+choose_disk_location_panel.options=Please select required options
 choose_disk_location_panel.select_file=Select file
 choose_disk_location_panel.calculating_directory_size=Calculating size of directory...
 choose_disk_location_panel.directory_non_existent=WARNING\: This directory does not exist
@@ -652,6 +653,7 @@ general.continue=Continue
 general.days={0} days
 general.delete.key=D
 general.delete=Delete
+general.directory=Directory
 general.description=Description
 general.estimated_size=Estimated size
 general.file=File
