#1283 - Make Last modified date clickable fixes #1283

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -486,7 +486,7 @@ exp_folder_view.no_recycled=Recycle bin not used
 exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last synchronized: {0}
 exp_folder_view.estimated_synchronized=Estimated synchronized: {0}
-
+exp_folder_view.sync_date_label.tip=Display most recent changes
 file_copier.progress_dialog.text=Copy files...
 file_copier.progress_dialog.title=Copy files progress
 
