#1337 - implement child frame moves with main frame.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -925,6 +925,7 @@ preferences.dialog.swarming.lan=Use swarming downloads on LAN
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.underline_link=Always underline links
+preferences.dialog.magnetic_frame=Move child windows with main window
 preferences.dialog.use.relayed.connections=Use relayed connections
 preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
