#790 - beginings for single file transfer

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -38,6 +38,7 @@ action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
 action_remove_ignore.icon=icons/Delete.gif
 action_restore_file.icon=icons/Restore.gif
+action_single_file_transfer.icon=icons/ArrowRight.gif
 action_stop_online_storage.icon=icons/StopOnlineFolder.png
 action_stop_preview_folder.icon=icons/StopPreviewFolder.png
 action_sync_folder.icon=icons/Sync.png
