--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -179,6 +179,10 @@ action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
 action_preview_folder.name=Preview
 
+action_single_file_transfer.description=Transfer file to other computer
+action_single_file_transfer.key=T
+action_single_file_transfer.name=Transfer
+
 action_stop_preview_folder.description=Join this preview folder
 action_stop_preview_folder.key=J
 action_stop_preview_folder.name=Join
