#790 - transfer offer UI for single file transfer

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -421,12 +421,20 @@ dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with 
 dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
 dialog.create_edit_profile.time_between_scans=(Maximum) time until change detection
 dialog.create_edit_profile.title_create=Create custom transfer mode
+dialog.single_file_transfer.title=Single file transfer
 dialog.create_edit_profile.title_edit=Edit custom transfer mode
 dialog.create_edit_profile.weekdays=Weekdays
 dialog.create_edit_profile.weekends=Weekends
 dialog.delete_profile.title=Delete custom transfer mode
 dialog.fatal_error.title=Fatal Error
 dialog.node_select.hide_offline.name=Hide offline
+dialog.node_select.multi_users=Multiple users selected
+dialog.node_select.no_users=No users selected
+dialog.node_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+dialog.node_select.title=Select Users
+dialog.single_file_transfer.computer=Computer
+dialog.single_file_transfer.file_name=File name
+dialog.single_file_transfer.select_computer.tip=Select computer
 dialog.synchronization.choose=Please choose your synchronization action
 dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
@@ -450,8 +458,6 @@ dialog.update_check.noUpdateAvailable=This version is up to date
 dialog.update_check.nothingNeverAsk=Nothing and never ask again
 dialog.update_check.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.update_check.title=Newer version available
-dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
-dialog.user_select.title=Select Users
 
 debug_information_card.title=Debug
 
@@ -969,8 +975,6 @@ send_invitation.ask_emailaddres.message=Email address to send invitation to
 send_invitation.ask_emailaddres.title=Email address
 send_invitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 send_invitation.example_email_address=Enter email of receipient
-send_invitation.multi_users=Multiple users selected
-send_invitation.no_users=No users selected
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.select_user.text=Select user
 send_invitation.subject=Invitation to the PowerFolder '{0}'
