--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -428,10 +428,10 @@ dialog.create_edit_profile.weekends=Weekends
 dialog.delete_profile.title=Delete custom transfer mode
 dialog.fatal_error.title=Fatal Error
 dialog.node_select.hide_offline.name=Hide offline
-dialog.node_select.multi_users=Multiple users selected
-dialog.node_select.no_users=No users selected
-dialog.node_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
-dialog.node_select.title=Select Users
+dialog.node_select.multi_computers=Multiple computers selected
+dialog.node_select.no_computers=No computers selected
+dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
+dialog.node_select.title=Select computers
 dialog.single_file_transfer.computer=Computer
 dialog.single_file_transfer.file_name=File name
 dialog.single_file_transfer.select_computer.tip=Select computer
@@ -523,7 +523,7 @@ file_info.downloading_from_member=Downloading from {0}
 file_info.expected=Expected
 file_info.ignore=This file is excluded from synchronization
 file_info.new_version_available=New version of file available
-file_info.remote_deleted=Newer version deleted by other user
+file_info.remote_deleted=Newer version deleted by other computer
 file_info.recently_downloaded=Recently downloaded
 
 files_table_model.name=Name
@@ -809,16 +809,16 @@ mp3_file_info.size=Size
 mp3_file_info.stereo_mono=Stereo/Mono
 mp3_file_info.title=Title
 
-network_statistics_panel.connected_users=Connected users
-network_statistics_panel.known_users=Known users
+network_statistics_panel.connected_computers=Connected computers
+network_statistics_panel.known_computers=Known computers
 network_statistics_panel.local_folder_count=Number of local folders (joined)
 network_statistics_panel.local_folders_size=Total size of all local files
 network_statistics_panel.number_of_local_files=Total number of local files
 network_statistics_panel.number_of_public_files=Total number of available files
-network_statistics_panel.online_users=Online users
+network_statistics_panel.online_computers=Online computers
 network_statistics_panel.public_folder_count=Number of public folders (not joined)
 network_statistics_panel.public_folders_size=Total size of all available files
-network_statistics_panel.reconnection_queue_size=Nodes in reconnection queue
+network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network.statistics.title=Network Statistics
 
 notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
@@ -862,7 +862,7 @@ preferences.dialog.delete_empty_dirs=Delete empty directories
 preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 preferences.dialog.delta_sync=Use delta sync on the Internet
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
-preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program if a folder is still synchronizing
@@ -899,7 +899,7 @@ preferences.dialog.network.title=Network
 preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.network_mode.lan_only=LAN only
 preferences.dialog.network_mode.name=Connect to
-preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, LAN computers and people who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private=LAN and Internet
 preferences.dialog.nickname=Nickname
 preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
@@ -976,7 +976,7 @@ send_invitation.ask_emailaddres.title=Email address
 send_invitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 send_invitation.example_email_address=Enter email of receipient
 send_invitation.placetostore=Choose a place to store invitation
-send_invitation.select_user.text=Select user
+send_invitation.select_computer.text=Select computer
 send_invitation.subject=Invitation to the PowerFolder '{0}'
 
 settings_tab.add_a_pattern.example=example/*.jpg
