#790 - send SingleFileOffer message

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -435,6 +435,7 @@ dialog.node_select.title=Select computers
 dialog.single_file_transfer.computer=Computer
 dialog.single_file_transfer.file_name=File name
 dialog.single_file_transfer.select_computer.tip=Select computer
+dialog.single_file_transfer.friend_message.text=Message (optional)
 dialog.synchronization.choose=Please choose your synchronization action
 dialog.synchronization.duplicate.delete=Deleting this transfer mode will affect all these folders.
 dialog.synchronization.duplicate.edit=Editing this transfer mode will affect all these folders.
