#790 - home page link for new single file offerings.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -715,6 +715,7 @@ home_tab.in_sync=All folders are synchronized
 home_tab.sync_eta=All folders will be synchronized {0}
 home_tab.last_synced=Last synchronized {0}
 home_tab.new_friend_requests=New friend request(s)
+home_tab.new_single_file_offers=New single file offer(s)
 home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
 home_tab.no_folders=No folders setup
