fixes #1404 fixes #1401 fixes #1405

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -278,14 +278,14 @@ pro.wizard.activation.online_activation=Online Activation
 pro.wizard.activation.order_additional=Click here to order additional licenses
 pro.wizard.activation.order_now=Click here to order PowerFolder Pro
 pro.wizard.activation.password_confirm=Confirm password
-pro.wizard.activation.password_length=Password needs to be at least 6 characters long
+pro.wizard.activation.password_length=Valid Email and at least 6 chars for password required.
 pro.wizard.activation.please_purchase=Please purchase PowerFolder Pro to re-activate.
 pro.wizard.activation.pro_activation=PowerFolder Pro Activation
 pro.wizard.activation.recover_password=Recover password
 pro.wizard.activation.register_now=Where can I register?
-pro.wizard.activation.register_now_trial_1=Free\: Register now for your 30-days trial of
-pro.wizard.activation.register_now_trial_2=PowerFolder Pro.
-pro.wizard.activation.register_why=Why do I need to register?
+pro.wizard.activation.register_now_trial_1=Please create an new trial account for free or
+pro.wizard.activation.register_now_trial_2=login with an existing to use PowerFolder Pro.
+pro.wizard.activation.register_why=Why do I need an account?
 pro.wizard.activation.subscribe_newsletter=Subscribe to newsletter
 pro.wizard.activation.successful=Activation successful
 pro.wizard.activation.thanks_activation=Thank you for activating PowerFolder Pro.
@@ -1158,7 +1158,7 @@ wizard.send_invitations.join=Invitation files are required to join a folder.
 wizard.send_invitations.never_untrusted=Never give out invitation files to untrusted people.
 wizard.send_invitations.over_powerfolder=Send via PowerFolder now
 wizard.send_invitations.save_to_file=Save as file
-wizard.send_invitations.send_by_mail.cc_me=Add me as CC recipient
+wizard.send_invitations.send_by_mail.cc_me=Send to my email address
 wizard.send_invitations.send_by_mail=Send by mail
 wizard.send_invitations.send_invitation=Send invitation
 wizard.send_invitations.send_success=Invitation sent
