--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -175,6 +175,10 @@ action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
 
+action_single_file_transfer_offer.description=Single file transfer offer 
+action_single_file_transfer_offer.key=O
+action_single_file_transfer_offer.name=Offer
+
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
 action_preview_folder.name=Preview
