#790 - Add accept panel, with message if provided.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -175,9 +175,13 @@ action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
 
-action_single_file_transfer_offer.description=Single file transfer offer 
+action_single_file_transfer_offer.description=Single file transfer offer
 action_single_file_transfer_offer.key=O
 action_single_file_transfer_offer.name=Offer
+
+action_single_file_transfer_accept.description=Single file transfer accept 
+action_single_file_transfer_accept.key=A
+action_single_file_transfer_accept.name=Accept
 
 action_preview_folder.description=Convert this folder to a preview
 action_preview_folder.key=P
@@ -425,6 +429,11 @@ dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with 
 dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
 dialog.create_edit_profile.time_between_scans=(Maximum) time until change detection
 dialog.create_edit_profile.title_create=Create custom transfer mode
+dialog.single_file_accept.title=Single file accept
+dialog.single_file_accept.line_1=You have received a single file offer from
+dialog.single_file_accept.line_2={0} for file {1}.
+dialog.single_file_accept.line_3=Please select destination directory.
+dialog.single_file_accept.select_destination=Select destination
 dialog.single_file_transfer.title=Single file transfer
 dialog.create_edit_profile.title_edit=Edit custom transfer mode
 dialog.create_edit_profile.weekdays=Weekdays
