--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1004,7 +1004,7 @@ settings_tab.confirm_local_folder_move.title=Confirm move
 settings_tab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 settings_tab.edit_a_pattern.title=Edit a pattern
 settings_tab.folder_preview=Folder preview
-settings_tab.folder_not_empty.title=Folder not empty.
+settings_tab.folder_not_empty.title=Folder not empty
 settings_tab.folder_not_empty=Folder {0} is not empty.
 settings_tab.ignore_patterns=Ignore patterns
 settings_tab.local_folder_location=Local folder location
