#1153 - tool tips for WhatToDo

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1195,8 +1195,14 @@ wizard.webservice.password=Password
 wizard.webservice.username=Email
 wizard.what_to_do.backup_folder=Backup a folder
 wizard.what_to_do.custom_sync=Advanced setup
+wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
 wizard.what_to_do.host_work=Share/Send a folder
+wizard.what_to_do.host_work.tip=Choose this option to host files or share them with other computers
 wizard.what_to_do.load_invite=Open invitation file
+wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.synchronized_folder=Synchronize computer
+wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize files with other computers
 wizard.what_to_do.title=What do you want to do?
 wizard.what_to_do.open_online_documentation=Open online documentation
+wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up PowerFolder
+
