#1153 - tool tips for WhatToDo

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1194,6 +1194,7 @@ wizard.webservice.unmirror_setup=Remove Folder from Online Storage
 wizard.webservice.password=Password
 wizard.webservice.username=Email
 wizard.what_to_do.backup_folder=Backup a folder
+wizard.what_to_do.backup_folder.tip=Choose this option to backup files to other computers
 wizard.what_to_do.custom_sync=Advanced setup
 wizard.what_to_do.custom_sync.tip=Choose this option to configure customized file transfer modes
 wizard.what_to_do.host_work=Share/Send a folder
