--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -305,6 +305,8 @@ pro.wizard.activation.update_service_account=Update Service Account
 pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
 pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
+pro.wizard.activation.no_key_info_1=Please login with an existing account to
+pro.wizard.activation.no_key_info_2=activate PowerFolder Pro.
 
 ###################
 # Everything Else #
