--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -9,6 +9,7 @@ picto.logo.icon=icons/pictos/PowerFolderLogo96x96.png
 action_abort_download.icon=icons/Abort.gif
 action_add_friend.icon=icons/AddFriend.gif
 action_add_ignore.icon=icons/Add.png
+action_add_directory.icon=icons/Add.png
 action_backup_online_storage.icon=icons/OnlineFolder.png
 action_clear_completed_downloads.icon=icons/Clear.gif
 action_clear_completed_uploads.icon=icons/Clear.gif
@@ -36,6 +37,7 @@ action_open_settings_information.icon=icons/Settings.png
 action_preview_folder.icon=icons/PreviewFolder.png
 action_reconnect.icon=icons/ConnectBright.png
 action_remove_friend.icon=icons/RemoveFriend.gif
+action_remove_directory.icon=icons/Delete.gif
 action_remove_ignore.icon=icons/Delete.gif
 action_restore_file.icon=icons/Restore.gif
 action_single_file_transfer.icon=icons/ArrowRight.gif
