--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,6 +27,10 @@ action_abort_download.description=Abort selected download
 action_abort_download.key=A
 action_abort_download.name=Abort
 
+action_add_directory.description=Add directory
+action_add_directory.key=A
+action_add_directory.name=Add
+
 action_add_friend.description=Add computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add
@@ -158,6 +162,10 @@ action_open_uploads_information.name=Uploads
 action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=R
 action_reconnect.name=Reconnect
+
+action_remove_directory.description=Remove directory
+action_remove_directory.key=R
+action_remove_directory.name=Remove
 
 action_remove_friend.description=Remove computer from friend list
 action_remove_friend.key=R
