#1153 - multi select translations

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -382,6 +382,9 @@ choose_disk_location_panel.maual_sync=Manual synchronization
 choose_disk_location_panel.send_invitation=Send invitation
 choose_disk_location_panel.target_dir=Target directory
 
+choose_multi_disk_location_panel.select=Please select the directories
+choose_multi_disk_location_panel.select_additional=Please select additional directories
+
 computers_tab.computer_type_list.text=Select computer types to display
 computers_tab.all_friends_online_lan=All friends / online LAN
 computers_tab.online_friends=Online friends
@@ -521,8 +524,6 @@ exp_folder_view.files_available_tip=Display the available files
 exp_folder_view.last_synchronized=Last synchronized: {0}
 exp_folder_view.estimated_synchronized=Estimated synchronized: {0}
 exp_folder_view.sync_date_label.tip=Display most recent changes
-file_copier.progress_dialog.text=Copy files...
-file_copier.progress_dialog.title=Copy files progress
 
 file_details_panel.availability=Availability
 file_details_panel.available=Available
