--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -369,22 +369,6 @@ chat_panel.member_left_folder_at_time={0} left folder {1} at {2}
 chat_panel.cannot_deliver=Message can not be delivered because '{0}' is not connected
 chat_panel.close_button.tool_tip=Close chat session with {0}
 
-choose_disk_location_panel.select=Please select the directory
-choose_disk_location_panel.options=Please select required options
-choose_disk_location_panel.select_file=Select file
-choose_disk_location_panel.calculating_directory_size=Calculating size of directory...
-choose_disk_location_panel.directory_non_existent=WARNING\: This directory does not exist
-choose_disk_location_panel.directory_no_write=WARNING\: This directory cannot be written to
-choose_disk_location_panel.directory_size=Directory size {0}
-choose_disk_location_panel.backup_by_online_storage=Backup by Online Storage
-choose_disk_location_panel.create_desktop_shortcut=Create desktop shortcut
-choose_disk_location_panel.maual_sync=Manual synchronization
-choose_disk_location_panel.send_invitation=Send invitation
-choose_disk_location_panel.target_dir=Target directory
-
-choose_multi_disk_location_panel.select=Please select the directories
-choose_multi_disk_location_panel.select_additional=Please select additional directories
-
 computers_tab.computer_type_list.text=Select computer types to display
 computers_tab.all_friends_online_lan=All friends / online LAN
 computers_tab.online_friends=Online friends
@@ -1136,6 +1120,22 @@ wizard.basic_setup.private=LAN and Internet
 wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basic_setup.upload.title=Unlimited connection speed
+wizard.choose_disk_location.title=Select Directory
+wizard.choose_disk_location.select=Please select the directory
+wizard.choose_disk_location.options=Please select required options
+wizard.choose_disk_location.select_file=Select file
+wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
+wizard.choose_disk_location.directory_non_existent=WARNING\: This directory does not exist
+wizard.choose_disk_location.directory_no_write=WARNING\: This directory cannot be written to
+wizard.choose_disk_location.directory_size=Directory size {0}
+wizard.choose_disk_location.backup_by_online_storage=Backup by Online Storage
+wizard.choose_disk_location.create_desktop_shortcut=Create desktop shortcut
+wizard.choose_disk_location.maual_sync=Manual synchronization
+wizard.choose_disk_location.send_invitation=Send invitation
+wizard.choose_disk_location.target_dir=Target directory
+wizard.choose_multi_disk_location.title=Select Directories
+wizard.choose_multi_disk_location.select=Please select required directories
+wizard.choose_multi_disk_location.select_additional=Please select additional directories
 wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
 wizard.control.cancel.description=Cancel this wizard
@@ -1187,9 +1187,9 @@ wizard.send_invitations.send_by_mail=Send by mail
 wizard.send_invitations.send_invitation=Send invitation
 wizard.send_invitations.send_success=Invitation sent
 wizard.send_invitations.send_success_info=You successfully sent the invitation.
-wizard.send_invitations.title=Save invitation
-wizard.setup_folder.title=Create Folder
-wizard.setup_folder.transfer_mode=Transfer mode
+wizard.send_invitations.title=Save Invitation
+wizard.folder_setup.title=Configure Folder
+wizard.folder_setup.transfer_mode=Transfer mode
 wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
