#1153 - MultiFolderSetupPanel for folder name and mode changes

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1167,6 +1167,7 @@ winutils.shortcut.description=This shortcut was placed here by PowerFolder
  wizard.login_online_storage.connecting=Connecting...
  wizard.login_online_storage.remember_password=Remember password
  wizard.login_online_storage.setup_default=Setup default synchronized folder.
+ wizard.multi_folder_setup.title=Configure Folders
  wizard.pfwizard.title=Folder Wizard
  wizard.project_name.choose=Choose project name
  wizard.project_name.enter_name=Enter the name of your project
