--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1168,6 +1168,8 @@ winutils.shortcut.description=This shortcut was placed here by PowerFolder
  wizard.login_online_storage.remember_password=Remember password
  wizard.login_online_storage.setup_default=Setup default synchronized folder.
  wizard.multi_folder_setup.title=Configure Folders
+ wizard.multi_folder_setup.no_name.title=No name
+ wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
  wizard.pfwizard.title=Folder Wizard
  wizard.project_name.choose=Choose project name
  wizard.project_name.enter_name=Enter the name of your project
