add / replace general.transfer_mode

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -630,7 +630,6 @@ folder_repository.warn_on_close.text=These folders are not synchronized yet\:\n\
 folder_repository.warn_on_close.title=Continue Exit?
 
 folderinfo.total_sync=Total sync
-folderinfo.transfer_mode=Transfer mode
 
 folders_tab.all_folders=All folders
 folders_tab.folder_type_list.text=Select folder types to display
@@ -708,6 +707,7 @@ general.synchonisation=Synchronization
 general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=Today
+general.transfer_mode=Transfer mode
 general.tuesday=Tuesday
 general.update=Update
 general.wednesday=Wednesday
@@ -1012,7 +1012,6 @@ settings_tab.move_error.temp=Could not create temporary folder
 settings_tab.move_error.title=Error moving folder contents
 settings_tab.online_storage=Online storage
 settings_tab.select_directory.text=Select folder location
-settings_tab.transfer_mode=Transfer mode
 settings_tab.use_recycle_bin=Use recycle bin
 settings_tab.working.description=The folder is being moved
 settings_tab.working.title=Moving folder
@@ -1160,7 +1159,6 @@ winutils.shortcut.description=This shortcut was placed here by PowerFolder
  wizard.folder_online_storage.warning_stop_backing=Stop backing up
  wizard.folder_online_storage.warning_title=Online Storage
  wizard.folder_setup.title=Configure Folder
- wizard.folder_setup.transfer_mode=Transfer mode
  wizard.load_invitation.choose_file=Choose the invitation file
  wizard.load_invitation.select=Select invitation file
  wizard.load_invitation.select_file=Please select invitation file
