nicer error message box

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -686,6 +686,7 @@ general.local_copy_at=Local copy at
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
 general.message=Message
+general.messages=Messages
 general.minutes=Minute(s)
 general.monday=Monday
 general.more.lower_case=more
